--- a/parameters/wiki/Parameters_SACADA.html
+++ b/parameters/wiki/Parameters_SACADA.html
@@ -2122,16 +2122,12 @@ ratio (0 to 1)
 </div>
 <div id="parameters-associated-to-air" class="section level3">
 <h3>Parameters associated to air</h3>
+<p>To be completed <!-- # ```{r table of air parameter, echo=FALSE} --> <!-- # data<-read.csv("parameters_air.csv",sep=";",header = T) --> <!-- # data<-as.data.frame(data) --> <!-- # data<-data[,-6] --> <!-- # knitr::kable( --> <!-- #   data,col.names = gsub("[.]", " ", names(data)), --> <!-- #   caption = 'Table 4. Set of parameters used for charateryzing air in the meat plant.' --> <!-- # )%>%kable_styling('striped', font_size = 10) --> <!-- #  --> <!-- # ``` --></p>
 </div>
-</div>
-<div id="r-table-of-air-parameter-echofalse-data-read.csvparameters_air.csvsepheader-t-data-as.data.framedata-data-data-6-knitrkable-datacol.names-gsub.-namesdata-caption-table-4.-set-of-parameters-used-for-charateryzing-air-in-the-meat-plant.-kable_stylingstriped-font_size-10" class="section level1">
-<h1><code>{r table of air parameter, echo=FALSE} # data&lt;-read.csv(&quot;parameters_air.csv&quot;,sep=&quot;;&quot;,header = T) # data&lt;-as.data.frame(data) # data&lt;-data[,-6] # knitr::kable( #   data,col.names = gsub(&quot;[.]&quot;, &quot; &quot;, names(data)), #   caption = &#39;Table 4. Set of parameters used for charateryzing air in the meat plant.&#39; # )%&gt;%kable_styling(&#39;striped&#39;, font_size = 10) #  #</code></h1>
 <div id="parameters-associated-to-food" class="section level3">
 <h3>Parameters associated to food</h3>
+<p>To be completed <!-- # ```{r table of food parameter, echo=FALSE} --> <!-- # data<-read.csv("parameters_food.csv",sep=";",header = T) --> <!-- # data<-as.data.frame(data) --> <!-- # data<-data[,-6] --> <!-- # knitr::kable( --> <!-- #   data,col.names = gsub("[.]", " ", names(data)), --> <!-- #   caption = 'Table 5. Set of parameters used for charateryzing food in the meat plant.' --> <!-- # )%>%kable_styling('striped', font_size = 10) --> <!-- #  --> <!-- # ``` --></p>
 </div>
-</div>
-<div id="r-table-of-food-parameter-echofalse-data-read.csvparameters_food.csvsepheader-t-data-as.data.framedata-data-data-6-knitrkable-datacol.names-gsub.-namesdata-caption-table-5.-set-of-parameters-used-for-charateryzing-food-in-the-meat-plant.-kable_stylingstriped-font_size-10" class="section level1">
-<h1><code>{r table of food parameter, echo=FALSE} # data&lt;-read.csv(&quot;parameters_food.csv&quot;,sep=&quot;;&quot;,header = T) # data&lt;-as.data.frame(data) # data&lt;-data[,-6] # knitr::kable( #   data,col.names = gsub(&quot;[.]&quot;, &quot; &quot;, names(data)), #   caption = &#39;Table 5. Set of parameters used for charateryzing food in the meat plant.&#39; # )%&gt;%kable_styling(&#39;striped&#39;, font_size = 10) #  #</code></h1>
 <div id="parameters-relative-to-the-simulation-time." class="section level3">
 <h3>Parameters relative to the simulation time.</h3>
 <p><em>The parameter relative to the simulation time will be entered in the file : parameters_time.R</em></p>
@@ -2142,6 +2138,7 @@ ratio (0 to 1)
 </ul>
 <p>Parms_Time &lt;- list( NDays = 365, ## total number of days during the entire process Step = 5 ## time step (in minutes) )</p>
 </div>
+</div>
 <div id="references" class="section level2 unnumbered">
 <h2>References</h2>
 <div id="refs" class="references">
@@ -2150,7 +2147,6 @@ ratio (0 to 1)
 </div>
 <div id="ref-Mallet2021">
 <p>Mallet, Yoann, Mathilde Pivette, Matthieu Revest, Elisabeth Angot, Marion Valence, Clarisse Dupin, Nicolas Picard, et al. 2021. “Identification of Workers at Increased Risk of Infection During a Covid-19 Outbreak in a Meat Processing Plant, France, May 2020.” Journal Article. <em>Food and Environmental Virology</em>, 1–9. <a href="https://doi.org/10.1007/s12560-021-09500-1">https://doi.org/10.1007/s12560-021-09500-1</a>.</p>
-</div>
 </div>
 </div>
 </div>
